[gd_scene load_steps=5 format=3 uid="uid://cl2iplnj5u6ln"]

[ext_resource type="Script" uid="uid://c330ue5uqdnk0" path="res://weapon&skill/grapple.gd" id="1_6uwoe"]
[ext_resource type="Texture2D" uid="uid://bemy7ariuci6a" path="res://pic/grapple.png" id="2_agjux"]

[sub_resource type="CircleShape2D" id="CircleShape2D_agjux"]
radius = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6uwoe"]
radius = 26.0768

[node name="Grapple" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2147483648
motion_mode = 1
script = ExtResource("1_6uwoe")

[node name="Grapple" type="Sprite2D" parent="."]
position = Vector2(0, 21.5)
scale = Vector2(0.5, 0.503356)
texture = ExtResource("2_agjux")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 25)
shape = SubResource("CircleShape2D_agjux")

[node name="EnemyDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EnemyDetect"]
polygon = PackedVector2Array(0, -6, -32, 47, 0, 69, 32, 48)

[node name="PlayerDetect" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2(0, 25)
shape = SubResource("CircleShape2D_6uwoe")

[node name="ObstacleDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ObstacleDetect"]
polygon = PackedVector2Array(0, -6, -27, 43, 0, 61, 31, 43)

[node name="free_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="EnemyDetect" to="." method="_on_body_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_entered" from="ObstacleDetect" to="." method="_on_obstacle_detect_body_entered"]
[connection signal="timeout" from="free_timer" to="." method="_on_free_timer_timeout"]
